--- a/src/renderer/assets/global.scss
+++ b/src/renderer/assets/global.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Mulish:wght@200;300;400;500;600;700;800&display=swap');
 
 @layer components {
   @variants dark {
@@ -9,6 +9,9 @@
   }
 }
 
+body {
+  @apply bg-gray-100 dark:bg-gray-900;
+}
 
 .blurred {
   backdrop-filter: blur(4px);
