--- a/src/renderer/assets/global.scss
+++ b/src/renderer/assets/global.scss
@@ -6,13 +6,66 @@
       @apply border border-gray-300 focus:outline-none focus:ring-2 focus:ring-indigo-400 focus:border-transparent
       dark:bg-gray-900 dark:text-gray-100 dark:border-gray-700 dark:placeholder-gray-600;
     }
+
+    .form-checkbox {
+      @apply rounded-md p-3 border border-gray-300 bg-gray-50 dark:bg-gray-900 dark:checked:bg-indigo-400
+      dark:border-gray-700 checked:border-transparent
+      focus:outline-none focus:ring-indigo-300 focus:ring-offset-0 ;//hover:cursor-pointer;
+    }
   }
 }
+
 
 body {
   @apply bg-gray-100 dark:bg-gray-900;
 }
 
-.blurred {
-  backdrop-filter: blur(4px);
+@layer base {
+
+  body {
+    --scrollbarBG: 'transparent';
+    --thumbBG: theme('colors.gray.200');
+    --thumbBG_Hover: theme('colors.gray.400');
+    --scrollbarBG_Hover: theme('colors.gray.50');
+    --scrollbarBG_Shadow: none;
+  }
+
+  body.dark {
+    --scrollbarBG: theme('colors.gray.800');
+    --thumbBG: theme('colors.gray.700');
+    --thumbBG_Hover: theme('colors.gray.600');
+    --scrollbarBG_Hover: theme('colors.gray.600');
+    --scrollbarBG_Shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
+  }
+
+  body {
+    scrollbar-width: thin;
+    scrollbar-color: var(--thumbBG) var(--scrollbarBG);
+  }
+
+  ::-webkit-scrollbar {
+    width: 10px;
+  }
+
+  /* background of the scrollbar except button or resizer */
+  ::-webkit-scrollbar-track {
+    background-color: var(--scrollbarBG);
+    box-shadow: var(--scrollbarBG_Shadow);
+  }
+  /*
+  ::-webkit-scrollbar-track:hover {
+      --scrollbarBG: var(--scrollbarBG_Hover)
+  }*/
+
+  /* scrollbar itself */
+  /* TODO: use an svg bg image with a transparent bg */
+  ::-webkit-scrollbar-thumb {
+    background-color: var(--thumbBG);
+    border-radius: 16px;
+    border: 2px solid var(--scrollbarBG);
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: var(--thumbBG_Hover);
+  }
 }
