--- a/src/renderer/assets/global.scss
+++ b/src/renderer/assets/global.scss
@@ -10,7 +10,7 @@
     .form-checkbox {
       @apply rounded-md p-3 border border-gray-300 bg-gray-50 dark:bg-gray-900 dark:checked:bg-indigo-400
       dark:border-gray-700 checked:border-transparent
-      focus:outline-none focus:ring-indigo-300 focus:ring-offset-0 ;//hover:cursor-pointer;
+      focus:outline-none focus:ring-indigo-300 focus:ring-offset-0 hover:cursor-pointer;
     }
   }
 }
