Start working on downloader overlays

--- a/src/renderer/assets/global.scss
+++ b/src/renderer/assets/global.scss
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Mulish:wght@200;300;400;500;600;700;800&display=swap');
 
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 @layer components {
   @variants dark {
     .form-input {
